--- a/css/style.scss
+++ b/css/style.scss
@@ -1,17 +1,5 @@
 @import './normalize';
 
-body {
-  font-family: 'Oswald';
-  color: #0060a0;
-  
-}
-
-.archive,
-.home {
-  // display: grid;
-  // grid-template-columns: 3fr 1fr 1fr;
-}
-
 p {
   font-family: 'Lato';
   line-height: 1.4rem;
@@ -23,18 +11,6 @@ h1, h2, h3, h4 {
 
 h2, h3, h4 {
   font-family: 'Lato';
-}
-
-h1 {
-  font-weight: 500;
-  text-transform: uppercase;
-  grid-column: 1/-1;
-  margin-top: 1rem;
-
-  a {
-    text-decoration: none;
-    color: #0060a0;
-  }
 }
 
 h2 {
@@ -118,28 +94,26 @@ html {
 }
 
 body {
-  height: 100%;
   position: relative;
-}
-
-body {
   box-shadow: inset 0 0 0 9px #0060a0;
   height: 100%;
   width: 100vw;
-}
+  font-family: 'Oswald';
+  color: #0060a0;
 
-body::before {
-  border: 9px solid #0060a0;
-  display: block;
-  content: '';
-  border-radius: 22px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  background-color: rgba(198,149,57, .5);
+  &::before {
+    border: 9px solid #0060a0;
+    display: block;
+    content: '';
+    border-radius: 22px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    background-color: rgba(198,149,57, .5);
+  }
 }
 
 header {
@@ -148,6 +122,18 @@ header {
   border-top-right-radius: 22px;
   border-bottom: 2px solid #0060a0;
   background-color: rgba(255,255,255,.5);
+}
+
+h1 {
+  font-weight: 500;
+  text-transform: uppercase;
+  grid-column: 1/-1;
+  margin-top: 1rem;
+
+  a {
+    text-decoration: none;
+    color: #0060a0;
+  }
 }
 
 .site {
