--- a/css/style.scss
+++ b/css/style.scss
@@ -165,6 +165,7 @@ a {
   border: 1px solid;
   border-radius: 9px;
   padding: .5rem .8rem;
+  background-color: rgba(255,255,255,.4);
 
   &-title {
     font-size: 1.2rem;
