--- a/css/style.scss
+++ b/css/style.scss
@@ -92,7 +92,6 @@ h2 {
       border-radius: 6px;
       height: 4px;
       background-color: var(--borderColor);
-      // content: '';
       display: block;
       position: absolute;
       bottom: 0;
@@ -122,7 +121,6 @@ h2 {
         margin-right: .6rem;
       }
     }
-    
   }
 }
 
@@ -174,11 +172,13 @@ a {
   }
   
   &-row {
-    display: grid;
-    grid-template-columns: 1fr 1.5fr;
     margin-bottom: .3rem;
   }
-  &-hours {
-    margin-left: .9rem;
+  &-day {
+    padding-right: .5rem;
   }
+}
+
+.archive-title {
+  text-transform: uppercase;
 }
