Make category and tag archive pages work

--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,7 @@ body {
   width: 100vw;
   font-family: 'Oswald';
   color: #0060a0;
+  overflow-x: hidden;
 
   &::before {
     border: 9px solid var(--borderColor);
