--- a/css/style.scss
+++ b/css/style.scss
@@ -16,7 +16,7 @@ html {
 body {
   position: relative;
   box-shadow: inset 0 0 0 9px var(--borderColor);
-  height: 100%;
+  min-height: 100%;
   width: 100vw;
   font-family: 'Oswald';
   color: #0060a0;
