--- a/css/style.scss
+++ b/css/style.scss
@@ -133,6 +133,10 @@ a {
   list-style: none;
   padding-left: 0;
   margin: 0;
+  display: flex;
+  flex-flow: column wrap;
+  height: calc(100vh - 12rem);
+  align-content: flex-start;
 
   li {
     padding-left: 1rem;
